# src/configs/swagger.json
@@ -143,6 +143,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -157,6 +160,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -206,6 +212,9 @@
           "201": {
             "description": "Created"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -230,6 +239,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -284,6 +296,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -304,6 +319,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -361,6 +379,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -375,6 +396,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -397,6 +421,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -419,6 +446,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -447,6 +477,15 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -468,8 +507,14 @@
           "204": {
             "description": "No Content"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -498,6 +543,15 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -520,9 +574,13 @@
           {
             "name": "body",
             "in": "body",
-            "required": true,
             "schema": {
-              "$ref": "#/definitions/PostLike"
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -532,6 +590,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -552,6 +613,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -574,6 +638,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -596,6 +663,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -624,6 +694,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -644,6 +717,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -675,6 +751,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -689,6 +768,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -711,6 +793,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -733,6 +818,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -761,6 +849,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -781,6 +872,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -812,6 +906,9 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
